--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,5 @@
 ---
-import "../styles/global.css";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
+import BaseLayout from '../layouts/BaseLayout.astro';
 const pageTitle = "About Me";
 
 const identity = {
@@ -17,28 +15,9 @@ const happy = true;
 const finished = false;
 const goal = 3;
 
-const skillColor = "navy";
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <title>{pageTitle}</title>
-    <style define:vars={{ skillColor }}>
-      h1 {
-        color: purple;
-        font-size: 4rem;
-      }
-      .skill {
-        color: var(--skillColor);
-        font-weight: bold;
-      }
-    </style>
-  </head>
-  <body>
-    <Header />
+<BaseLayout pageTitle={pageTitle}>
     <h1>{pageTitle}</h1>
     <h2>... and my new Astro site!</h2>
 
@@ -83,12 +62,4 @@ const skillColor = "navy";
         <p>My goal is not 3 days.</p>
       )
     }
-
-    <Footer />
-
-    <script>
-      import "../scripts/menu.js";
-   </script>
-   
-  </body>
-</html>
+</BaseLayout>
