--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,23 +1,11 @@
 ---
-import "../styles/global.css";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
+import BaseLayout from '../layouts/BaseLayout.astro';
 const pageTitle = "Blog";
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{pageTitle}</title>
-  </head>
-  <body>
-    <Header />
+<BaseLayout pageTitle={pageTitle}>
 
     <h1>{pageTitle}</h1>
-
     <p>This is my new dumb blog!</p>
 
     <!-- in the tutorial (so far) these links are being done manually -->
@@ -27,10 +15,5 @@ const pageTitle = "Blog";
       <li><a href="/posts/post-3/">Post 3</a></li>
     </ul>
 
-    <Footer />
+</BaseLayout>
 
-    <script>
-      import "../scripts/menu.js";
-    </script>
-  </body>
-</html>
