--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,6 +1,10 @@
 ---
+import BaseLayout from './BaseLayout.astro';
 const { frontmatter } = Astro.props;
 ---
+<BaseLayout pageTitle={frontmatter.title}>
 <h1>{frontmatter.title}</h1>
 <p>Written by {frontmatter.author} | Published {frontmatter.pubDate}</p> 
+<img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
 <slot />
+</BaseLayout>
