--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -3,8 +3,36 @@ import BaseLayout from './BaseLayout.astro';
 const { frontmatter } = Astro.props;
 ---
 <BaseLayout pageTitle={frontmatter.title}>
-<h1>{frontmatter.title}</h1>
-<p>Written by {frontmatter.author} | Published {frontmatter.pubDate}</p> 
-<img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
-<slot />
+    <h1>{frontmatter.title}</h1>
+    <p>Written by {frontmatter.author} | Published {frontmatter.pubDate}</p> 
+    <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
+
+    <div class="tags">
+        <!-- "tags" doesn't need to be defined here again and comes from frontmatter instead -->
+        <!-- it's set in [tag].astro -->
+        {frontmatter.tags.map((tag) => (
+          <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>
+        ))}
+      </div>
+    <slot />
+
+    <style>
+        a {
+          color: #00539F;
+        }
+      
+        .tags {
+          display: flex;
+          flex-wrap: wrap;
+        }
+      
+        .tag {
+          margin: 0.25em;
+          border: dotted 1px #a1a1a1;
+          border-radius: .5em;
+          padding: .5em 1em;
+          font-size: 1.15em;
+          background-color: #F8FCFD;
+        }
+      </style>
 </BaseLayout>
