main tutorial complete

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -80,3 +80,14 @@ h1 {
     display: none;
   }
 }
+
+/* Dark theme styles */
+
+html.dark {
+  background-color: #0d0950;
+  color: #fff;
+}
+
+.dark .nav-links a {
+  color: #fff;
+}
