--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -4,7 +4,7 @@ const { frontmatter } = Astro.props;
 ---
 <BaseLayout pageTitle={frontmatter.title}>
     <h1>{frontmatter.title}</h1>
-    <p>Written by {frontmatter.author} | Published {frontmatter.pubDate}</p> 
+    <p>Written by {frontmatter.author} | Published {frontmatter.pubDate.toString().slice(0,10)}</p> 
     <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
 
     <div class="tags">
