--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,7 @@
 ---
+import { getCollection } from "astro:content";
 import BaseLayout from '../layouts/BaseLayout.astro';
-const allPosts = await Astro.glob('../pages/posts/*.md');
+const allPosts = await getCollection("posts");
 const pageTitle = "Blog";
 ---
 
@@ -11,7 +12,7 @@ const pageTitle = "Blog";
 
     <!-- in the tutorial (so far) these links are being done manually -->
     <ul>
-      {allPosts.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
+      {allPosts.map((post) => <li><a href={`/posts/${post.slug}/`}>{post.data.title}</a></li>)}
     </ul>
 
 </BaseLayout>
